# ARCclaude

./: .gitignore  .mcp.json  ARCclaude App.cmd  CONTRIBUTING.md  README.md  SECURITY.md  install.cmd  install.ps1  pyproject.toml  rules.md
addin/: README.md  package.ps1
addin/ARCclaude.Addin/: ARCclaude.Addin.csproj  ARCclaudePaneView.xaml  ARCclaudePaneView.xaml.cs  ARCclaudePaneViewModel.cs  Config.daml  LiveLinkService.cs  Module1.cs  ShowPaneButton.cs
addin/ARCclaude.Addin/Runner/: arcclaude_runner.pyt
docs/: ADDIN_DESIGN.md  ARCHITECTURE.md  COMPARISON.md  PITCH.md  PRODUCT.md  QGIS_EXPORT.md  ROADMAP.md  SETUP.md  VISION.md
src/arcclaude/: __init__.py  agent.py  bridge.py  chat.py  cli.py  discovery.py  live.py  qgis_export.py  server.py  webapp.py
src/arcclaude/worker/: __init__.py  arcpy_worker.py  live_listener.py
tests/: qgis_validate.py  smoke_app.py  smoke_bridge.py  smoke_live.py  smoke_mcp.py  smoke_qgis.py
