[project]
name = "arcclaude"
version = "0.2.0"
description = "ARCclaude — an open-source MCP server giving AI assistants complete access to the ArcGIS Pro ecosystem via ArcPy"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "ARCclaude contributors" }]
keywords = ["arcgis", "arcpy", "gis", "mcp", "ai", "claude", "geospatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = ["mcp>=1.2.0"]

[project.scripts]
arcclaude = "arcclaude.server:main"

[project.urls]
Homepage = "https://github.com/thaparSAAB14/ARCclaude"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arcclaude"]

[dependency-groups]
dev = ["pytest>=8.0"]
